--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -11,6 +11,8 @@
 @import "elementos/divs";
 @import "moleculas/banners";
 @import "moleculas/card";
+@import "moleculas/carrusel";
+@import "moleculas/carrito";
 @import "organismos/main";
 @import "atomos/parrafos";
 @import "organismos/footer";
