--- a/public/scss/atomos/_imagenes.scss
+++ b/public/scss/atomos/_imagenes.scss
@@ -1,12 +1,12 @@
-img{
-    width: 100%;
-    object-fit: contain;
-}
-
-/*banners img*/
 .banner__img{
     height: 100%;
     width: 100%;
     object-fit: cover;
     opacity: 0.7;
 }
+
+.img-uno{background-image: url("./img/joy.png");}
+
+.img-dos{background-image:url("./img/labiales-lq.png");}
+
+.img-tres{background-image:url("./img/crema-hp.png");}
