--- a/public/scss/atomos/_parrafos.scss
+++ b/public/scss/atomos/_parrafos.scss
@@ -8,28 +8,8 @@ p {
 	border: 5px;
 	margin: 5px;
 	padding: 5px;
-	font-family: "Mukta";
-	color: $secundario;
+    font-family: "Poppins";
+	color: rgb(5, 5, 5);
 }
 
 
-/*nosotros*/
-.prr1 {
-	margin: 0 0 24px 0;
-}
-
-.texto-interior {
-	font-size: 20px;
-	font-weight: bold;
-	left: 10%;
-	position: absolute;
-	text-align: center;
-	top: 40%;
-	width: 80%
-}
-
-.texto {
-	@include parrafos-importantes;
-	padding: 5%;
-	width: 90%;
-}
