--- a/public/scss/elementos/_heading.scss
+++ b/public/scss/elementos/_heading.scss
@@ -3,7 +3,7 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,nav {
     margin: 10px;
     padding: 10px;
     border: 10px;
@@ -11,16 +11,10 @@ h6 {
     align-content: center;
     justify-content: center;
     text-align: center;
-    color: $_azulclaro;
     text-decoration: none;
     list-style: none;
-    font-family: "Mukta";
+    color: rgb(238, 87, 244)!important;
 }
-
-h1 {
-    font-size: 2,5rem;
-}
-
 h2 {
     font-size: 1.5rem;
 }
