--- a/public/scss/moleculas/_banners.scss
+++ b/public/scss/moleculas/_banners.scss
@@ -2,10 +2,11 @@
 .banner{
     height: 500px;
     position: relative;
-    background: rgb(223, 242, 246);
+    background: rgb(227, 187, 239);
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 100px;
 }
 
 
