--- a/public/scss/organismos/_footer.scss
+++ b/public/scss/organismos/_footer.scss
@@ -1,3 +1,6 @@
-footer{
-    background: rgb(162, 234, 250);
-}
+.main-footer {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 20px;
+    background-color: rgb(190, 147, 243);
+  }
